# KaraOK

./: .gitignore  ReadMe.txt  build.gradle  local.properties  settings.gradle
KaraOK/app/: build.gradle
KaraOK/app/src/androidTest/java/com/example/karaok/: ExampleInstrumentedTest.java
KaraOK/app/src/main/res/values/: strings.xml  themes.xml
KaraOK/app/src/main/res/values-night/: themes.xml
KaraOK/app/src/test/java/com/example/karaok/: ExampleUnitTest.java
KaraOK/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle  google-services.json
app/src/androidTest/java/com/example/karaok/: FFmpegAPITest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  FullDuplexStream.cpp  FullDuplexStream.h  LiveEffectEngine.h  jni_bridge.cpp  native-lib.cpp
app/src/main/java/com/example/karaok/: AudioRecorder.java  EffectsAdapter.kt  EndScreen.java  FFmpegAPI.java  FXMainActivity.kt  LiveEffectDemo.java  LiveEffectEngine.java  LyricsDisplayActivity.java  MainActivity.java  MusicConverter.java  NativeInterface.kt  Register.java  Song.java  SongListAdapter.java  SongSelection.java  SongViewHolder.java  VolumeMixer.java
app/src/main/java/com/example/karaok/datatype/: Effect.kt  EffectDescription.kt  ParamDescription.kt
app/src/main/res/drawable-anydpi/: ic_settings.xml
app/src/main/res/layout/: activity_end_screen.xml  activity_liveeffect_demo.xml  activity_lyrics_display.xml  activity_main.xml  activity_register.xml  activity_song_selection.xml  dialog_preview.xml  fx_activity_main.xml  song_item.xml
app/src/main/res/layout-v21/: activity_liveeffect_demo.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
